<resources>
    <string name="facebook_app_id">477447330275035</string>
    <string name="app_name">মাহে রমজান</string>
    <string name="demo">---</string>
    <string name="main_title">রমজান সময়সূচী</string>
    <string name="arabic_year">১৪৪১ হিজরি রমজান</string>
    <string name="english_year">ইংরেজি</string>
    <string name="day_of_week">বার</string>
    <string name="last_time_of_suhoor">সাহরীর শেষ সময়</string>
    <string name="starting_time_fazr">ফজরের ওয়াক্ত শুরু</string>
    <string name="Iftaar_time">ইফতারের সময়</string>
    <string name="other_zilla_time_diff">অন্য জেলাগুলোর সময়ের পার্থক্য</string>
    <string name="duas">দোয়া সমূহ</string>
    <string name="reasons_fast_breaks">রোজা ভঙ্গের কারন</string>
    <string name="tasbih">তসবিহ</string>
    <string name="fast_fard_rules">রোজা ফরযের শর্ত</string>
    <string name="alarm_setter">এলার্ম দিন</string>
    <string name="contributors">সৌজন্যে</string>
    <string name="close">উইন্ডো বন্ধ করুন</string>
    <string name="set_time_from_clock">আজকের অ্যালার্ম সেট করুন</string>
    <string name="cancel_alarm">অ্যালার্ম বাতিল করুন</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_main">ca-app-pub-9447458149465385/8295314189</string>
    <string name="banner_ad_unit_id_doa">ca-app-pub-9447458149465385/5421175153</string>
    <string name="banner_ad_unit_id_karon">ca-app-pub-9447458149465385/3916521798</string>
    <string name="banner_ad_unit_id_sorto">ca-app-pub-9447458149465385/2618724323</string>
    <string name="banner_ad_unit_id_others">ca-app-pub-9447458149465385/1305642656</string>
    <string name="english_date">তারিখ</string>
    <string name="roza_no">রোজা নং</string>
    <string name="no_supported_feature">"এই ফিচারটি আপনার মোবাইলে সমর্থিত নয়।"</string>
    <string name="year">২০২১</string>

    <string name="num0">০</string>
    <string name="num1">১</string>
    <string name="num2">২</string>
    <string name="num3">৩</string>
    <string name="num4">৪</string>
    <string name="num5">৫</string>
    <string name="num6">৬</string>
    <string name="num7">৭</string>
    <string name="num8">৮</string>
    <string name="num9">৯</string>

    <string name="month1">জানুয়ারী</string>
    <string name="month2">ফেব্রুয়ারী</string>
    <string name="month3">মার্চ</string>
    <string name="month4">এপ্রিল</string>
    <string name="month5">মে</string>
    <string name="month6">জুন</string>
    <string name="month7">জুলাই</string>
    <string name="month8">আগস্ট</string>
    <string name="month9">সেপ্টেম্বর</string>
    <string name="month10">অক্টোবর</string>
    <string name="month11">নভেম্বর</string>
    <string name="month12">ডিসেম্বর</string>
    <string name="timeDiff">অন্য জেলাগুলোর সময়ের পার্থক্য</string>
    <string name="district">জেলা</string>
    <string name="sehri_diff">সেহরির সময়ের পার্থক্য</string>
    <string name="iftar_diff">ইফতারের সময়ের পার্থক্য</string>

</resources>
