<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fragment_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="25dp"
    android:paddingBottom="25dp"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/set_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/coral_Reef"
        android:text="@string/set_time_from_clock"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/cancel_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/coral_Reef"
        android:text="@string/cancel_alarm"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/close_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/coral_Reef"
        android:paddingLeft="30dp"
        android:paddingTop="15dp"
        android:paddingRight="30dp"
        android:paddingBottom="15dp"
        android:text="@string/close"
        android:textAlignment="center"
        android:textStyle="bold" />

</LinearLayout>