<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/top_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        android:background="@color/coral_Reef"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:background="@drawable/border4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6">
                    <TextView
                        android:id="@+id/tv1"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="#f3f3f3"
                        android:background="@drawable/border_top_left_curved" />
                    <TextView
                        android:id="@+id/tv2"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="#f3f3f3"
                        android:background="@drawable/border3" />
                    <TextView
                        android:id="@+id/tv3"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="#f3f3f3"
                        android:background="@drawable/border3" />
                    <TextView
                        android:id="@+id/tv4"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="#f3f3f3"
                        android:background="@drawable/border3" />
                    <TextView
                        android:id="@+id/tv5"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="#f3f3f3"
                        android:background="@drawable/border3" />
                    <TextView
                        android:id="@+id/tv6"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_height="match_parent"
                        android:layout_width="0dp"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:textColor="#f3f3f3"
                        android:background="@drawable/border_top_right_curved" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerviewMainPage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </androidx.recyclerview.widget.RecyclerView>

                </LinearLayout>
                <Button
                    android:id="@+id/onnoElaka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:text="@string/other_zilla_time_diff"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/doaBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/duas"/>
                    <Button
                        android:id="@+id/karonBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/reasons_fast_breaks"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/tasbihBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/tasbih"
                        />
                    <Button
                        android:id="@+id/sortoBtn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:text="@string/fast_fard_rules"
                        />
                </LinearLayout>
                <Button
                    android:id="@+id/setAlarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/alarm_setter"/>
                <Button
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/contributors"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <!--     Test Ad-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_main"
        ads:layout_constraintTop_toBottomOf="@+id/top_header"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>

